--- a/feature/front/Dockerfile
+++ b/feature/front/Dockerfile
@@ -1,5 +1,5 @@
 # Builder
-FROM node:18.14.1 as builder
+FROM node:18.13.9 as builder
 
 WORKDIR /app
 
@@ -20,6 +20,9 @@ COPY nginx.conf /etc/nginx/nginx.conf
 # Copy built files
 COPY --from=builder /app/dist /usr/share/nginx/html
 
-EXPOSE 3000
+# Copy the nginx configuration file
+COPY nginx.conf /etc/nginx/conf.d/default.conf
+
+EXPOSE 80
 
 CMD ["nginx", "-g", "daemon off;"]
