--- a/server_management/ansible/playbook/all/java&docker.yaml
+++ b/server_management/ansible/playbook/all/java&docker.yaml
@@ -4,17 +4,19 @@
   become: yes                     # 필요한 경우 권한을 상승시킵니다 (sudo로 권한 상승)
   tasks:                          # 이 플레이에 대해 실행할 작업 목록
     - name: Java OpenJDK 11 설치
-      ansible.builtin.apt:
+      apt:
         name: openjdk-11-jdk
         state: present
 
+    - name: Java version 확인
+      shell: java -version
 
 - name: 플레이 2 - 원격 호스트에 Docker 설치 및 구성
   hosts: all
   become: yes
   tasks:
     - name: Docker 설치를 위한 필수 패키지 설치
-      ansible.builtin.apt:
+      apt:
         name:
           - apt-transport-https
           - ca-certificates
