--- a/server_management/ansible/playbook/all/java&docker.yaml
+++ b/server_management/ansible/playbook/all/java&docker.yaml
@@ -3,13 +3,18 @@
   hosts: all                     # 이 플레이의 대상 호스트 (인벤토리 파일에서 정의됨)
   become: yes                     # 필요한 경우 권한을 상승시킵니다 (sudo로 권한 상승)
   tasks:                          # 이 플레이에 대해 실행할 작업 목록
+    - name: apt 캐시 업데이트
+      ansible.builtin.apt:
+        update_cache: yes
+
     - name: Java OpenJDK 11 설치
       apt:
         name: openjdk-11-jdk
         state: present
 
     - name: Java version 확인
-      shell: java -version
+      shell:
+        command: java -version
 
 - name: 플레이 2 - 원격 호스트에 Docker 설치 및 구성
   hosts: all
