--- a/server_management/ansible/playbook/all/java&docker.yaml
+++ b/server_management/ansible/playbook/all/java&docker.yaml
@@ -1,18 +1,18 @@
 # 플레이북에는 하나 이상의 플레이가 있을 수 있습니다.
-- name: 플레이 1 - 원격 호스트에 Java OpenJDK 11 설치
+- name: Play 1 - Java OpenJDK 11 Install
   hosts: all                     # 이 플레이의 대상 호스트 (인벤토리 파일에서 정의됨)
   become: yes                     # 필요한 경우 권한을 상승시킵니다 (sudo로 권한 상승)
   tasks:                          # 이 플레이에 대해 실행할 작업 목록
-    - name: apt 캐시 업데이트
-      ansible.builtin.apt:
+    - name: apt update
+      apt:
         update_cache: yes
 
-    - name: Java OpenJDK 11 설치
+    - name: Java OpenJDK 11 Install
       apt:
         name: openjdk-11-jdk
         state: present
 
-    - name: Java version 확인
+    - name: Java version check
       shell:
         command: java -version
 
