Feat public_ip output 추가

--- a/server_management/ansible/playbook/all/java&docker.yaml
+++ b/server_management/ansible/playbook/all/java&docker.yaml
@@ -14,7 +14,7 @@
 
     - name: Java version check
       shell:
-        command: java -version
+        command: java --version
 
 - name: 플레이 2 - 원격 호스트에 Docker & Docker-compose 설치 및 구성
   hosts: all
