--- a/dashboard/docker-compose.yml
+++ b/dashboard/docker-compose.yml
@@ -1,10 +1,10 @@
-version: '3'
+version: "3"
 services:
   # 도커 컨테이너 대시보드
   portainer:
-    image: 'portainer/portainer-ce:$PORTAINER_VERSION'
+    image: "portainer/portainer-ce:$PORTAINER_VERSION"
     ports:
-      - '$PORTAINER_PORT:9000'
+      - "$PORTAINER_PORT:9000"
     restart: unless-stopped
     volumes:
       # Docker sock
@@ -18,16 +18,16 @@ services:
         target: /data
         read_only: false
     networks:
-      - br_log
+      - br_app
 
   # Nginx 대시보드
   nginx-manager:
-    image: 'jc21/nginx-proxy-manager:$NGINX_MANAGER_VERSION'
+    image: "jc21/nginx-proxy-manager:$NGINX_MANAGER_VERSION"
     restart: unless-stopped
     ports:
-      - '80:80'
-      - '443:443'
-      - '$NGINX_MANAGER_PORT:81'
+      - "80:80"
+      - "443:443"
+      - "$NGINX_MANAGER_PORT:81"
     volumes:
       # Data
       - type: bind
