--- a/server_management/ansible/playbook/all/docker_init.yaml
+++ b/server_management/ansible/playbook/all/docker_init.yaml
@@ -12,3 +12,14 @@
       ansible.builtin.command:
         cmd: docker network create br-app
       when: "'br-app' not in br_app_network.stdout"
+    
+    - name: Add current user to docker group
+      ansible.builtin.user:
+        name: "{{ ansible_user }}"
+        group: docker
+        append: yes
+        
+    - name: Restart Docker
+      ansible.builtin.systemd:
+        name: docker
+        state: restarted
