Feat docker sudo없이 사용하도록 설정

--- a/server_management/ansible/playbook/all/docker_init.yaml
+++ b/server_management/ansible/playbook/all/docker_init.yaml
@@ -12,13 +12,19 @@
       ansible.builtin.command:
         cmd: docker network create br-app
       when: "'br-app' not in br_app_network.stdout"
+
+    - name: Create Docker group
+      become: yes
+      group:
+        name: docker
+        state: present
     
     - name: Add current user to docker group
       ansible.builtin.user:
         name: "{{ ansible_user }}"
         group: docker
         append: yes
-        
+
     - name: Restart Docker
       ansible.builtin.systemd:
         name: docker
