Feat docker sudo없이 사용하도록 설정

--- a/server_management/ansible/playbook/all/docker_init.yaml
+++ b/server_management/ansible/playbook/all/docker_init.yaml
@@ -25,6 +25,12 @@
         group: docker
         append: yes
 
+    - name: Modify Docker socket permissions
+      become: yes
+      file:
+        path: /var/run/docker.sock
+        mode: '0666'
+
     - name: Restart Docker
       ansible.builtin.systemd:
         name: docker
