--- a/server_management/ansible/playbook/kafka_server/kafka.yaml
+++ b/server_management/ansible/playbook/kafka_server/kafka.yaml
@@ -3,12 +3,18 @@
   become: yes
 
   tasks:
+    - name: Create /etc/kafka folder
+      ansible.builtin.file:
+        path: /etc/kafka
+        state: directory
+        mode: '0755'
+        
     - name: docker-compose yaml 복사
       copy:
         src: docker-compose.yaml
-        dest: /opt/kafka/docker-compose.yaml
+        dest: /etc/kafka/docker-compose.yaml
 
     - name: docker-compose 실행
       command: docker-compose up -d
       args:
-        chdir: /opt/kafka
+        chdir: /etc/kafka
