--- a/feature/database/docker-compose.yaml
+++ b/feature/database/docker-compose.yaml
@@ -7,7 +7,7 @@ services:
     ports:
       - "8086:8086"
     volumes:
-      - config.yml:/etc/influxdb2/config.yml
+      - ./config.yml:/etc/influxdb2/config.yml
     networks:
       - br_app
 
