--- a/feature/monitoring/docker-compose.yaml
+++ b/feature/monitoring/docker-compose.yaml
@@ -2,7 +2,7 @@ version: '3'
 
 services:
   grafana:
-    image: grafana/grafana:latest
+    image: grafana/grafana
     container_name: grafana
     ports:
       - "3000:3000"
@@ -12,7 +12,7 @@ services:
       - br_app
 
   prometheus:
-    image: prom/prometheus:latest
+    image: prom/prometheus
     container_name: prometheus
     ports:
       - "9090:9090"
