--- a/feature/monitoring/docker-compose.yaml
+++ b/feature/monitoring/docker-compose.yaml
@@ -4,6 +4,7 @@ services:
   grafana:
     image: grafana/grafana
     container_name: grafana
+    restart: always
     ports:
       - "3000:3000"
     volumes:
@@ -14,13 +15,12 @@ services:
   prometheus:
     image: prom/prometheus
     container_name: prometheus
+    restart: always
     ports:
       - "9090:9090"
     volumes:
       - ./prometheus/config:/etc/prometheus
       - ./prometheus/volume:/prometheus
-    restart: 
-      - always
     networks:
       - br_app
 
