--- a/feature/monitoring/docker-compose.yaml
+++ b/feature/monitoring/docker-compose.yaml
@@ -16,6 +16,7 @@ services:
   prometheus:
     image: prom/prometheus
     container_name: prometheus
+    user: "472:472"
     ports:
       - "9090:9090"
     volumes:
