--- a/server_management/ansible/playbook/all/init.yaml
+++ b/server_management/ansible/playbook/all/init.yaml
@@ -129,7 +129,12 @@
         name: python3-pip
         state: present
 
-    - name: Install Docker SDK for Python
+    - name: 도커 컴포즈 설치
       ansible.builtin.pip:
         name: docker
+        state: present
+
+    - name: 도커 컴포즈 라이브러리 설치
+      ansible.builtin.pip:
+        name: docker-compose
         state: present
