--- a/server_management/ansible/playbook/main_server/data_division_playbook.yaml
+++ b/server_management/ansible/playbook/main_server/data_division_playbook.yaml
@@ -20,7 +20,7 @@
 
     - name: data_division 배포
       docker_compose:
-        project_src: "{{ compose_file }}/docker-compose.yaml"
+        project_src: "~/data_division/docker-compose.yaml"
         state: present
         pull: yes
         remove_orphans: yes
