--- a/server_management/ansible/playbook/main_server/data_api.yaml
+++ b/server_management/ansible/playbook/main_server/data_api.yaml
@@ -2,6 +2,8 @@
   hosts: main_server1
   vars:
     compose_file: "./data_api"
+    container_name: "api"
+    image_name: "scofe/api"
   tasks:
     - name: Create data_api directory
       file:
@@ -13,6 +15,14 @@
         src: "{{ compose_file }}/docker-compose.yaml"
         dest: ~/data_api/docker-compose.yaml
 
+    - name: Stop and remove existing Docker container
+      docker_container:
+        name: "{{ container_name }}"
+        state: absent
+        force_kill: yes
+      register: stop_result
+      ignore_errors: yes
+
     - name: 도커 실행중인지 확인
       service:
         name: docker
@@ -20,7 +30,7 @@
 
     - name: api 배포
       docker_compose:
-        project_src: "{{ compose_file }}"
+        project_src: "~/data_api"
         state: present
         pull: yes
         remove_orphans: yes
