Feat docker-compose playbook 경로수정

--- a/server_management/ansible/playbook/main_server/data_division_playbook.yaml
+++ b/server_management/ansible/playbook/main_server/data_division_playbook.yaml
@@ -2,7 +2,7 @@
   hosts: main_server1
   vars:
     compose_file: "./data_division"
-    container_name: "division"
+    container_name: "data_division"
     image_name: "scofe/data_division"
   tasks:
     - name: Create data_division directory
