Feat data_server sercret 추가

--- a/server_management/ansible/playbook/data_server/data_generator_secret.yaml
+++ b/server_management/ansible/playbook/data_server/data_generator_secret.yaml
@@ -7,7 +7,7 @@
         path: ~/secret
         state: directory
 
-    - name: application-secret.yml 파일 생성
+    - name: application-secret.yaml 파일 생성
       template:
-        src: ./secret/application-secret.yml.j2  # 템플릿 파일의 경로
-        dest: ~/sercret/application-secret.yml  # 생성할 파일의 경로
+        src: ./secret/application-secret.yaml.j2  # 템플릿 파일의 경로
+        dest: ~/sercret/application-secret.yaml  # 생성할 파일의 경로
