Feat data_server playbook 수정

--- a/server_management/ansible/playbook/data_server/data_generator_playbook.yaml
+++ b/server_management/ansible/playbook/data_server/data_generator_playbook.yaml
@@ -14,7 +14,7 @@
     - name: Clone the repository
       git:
         repo: 'https://github.com/Projcet-E201/DataDivision.git'
-        dest: '~/'
+        dest: '~/DataDivision'
         clone: yes
         update: yes
 
