--- a/server_management/ansible/inventory/hosts.yaml
+++ b/server_management/ansible/inventory/hosts.yaml
@@ -3,7 +3,7 @@ all:
   # 이 경우 모든 호스트에 대해 변수를 설정한다.
   vars:
     ansible_user: ubuntu
-    ansible_ssh_private_key_file: "/etc/ansible/semsekey.pem"
+    ansible_ssh_private_key_file: "/etc/ansible/semsekey2.pem"
 
   # 모든 하위 그룹을 포함하는 그룹정의
   # 아래의 그룹들을 all의 하위그룹으로 포함한다.
