--- a/server_management/ansible/playbook/all/init.yaml
+++ b/server_management/ansible/playbook/all/init.yaml
@@ -3,6 +3,11 @@
   hosts: all # 이 플레이의 대상 호스트 (인벤토리 파일에서 정의됨)
   become: yes # 필요한 경우 권한을 상승시킵니다 (sudo로 권한 상승)
   tasks: # 이 플레이에 대해 실행할 작업 목록
+    - name: Install python3-pip
+      ansible.builtin.package:
+        name: python3-pip
+        state: present
+
 
     - name: apt update
       apt:
@@ -16,6 +21,7 @@
     - name: Java version check
       ansible.builtin.command:
         _raw_params: java --version
+
 
 - name: 원격 호스트에 Docker & Docker-compose 설치 및 구성
   hosts: all
@@ -123,15 +129,10 @@
         name: docker
         state: restarted
         
-- name: 파이썬3 설치
+- name: 파이썬 라이브러리 설치
   hosts: all
   become: yes
   tasks:
-    - name: Install python3-pip
-      ansible.builtin.package:
-        name: python3-pip
-        state: present
-
     - name: 도커 컴포즈 설치
       ansible.builtin.pip:
         name: docker
