--- a/server_management/ansible/playbook/data_server/data_generator_secret_playbook.yaml
+++ b/server_management/ansible/playbook/data_server/data_generator_secret_playbook.yaml
@@ -4,10 +4,10 @@
   tasks:
     - name: secret 폴더생성
       file:
-        path: ~/secret
+        path: /home/ubuntu/secret
         state: directory
 
     - name: application-secret.yaml 파일 생성
       template:
         src: ./secret/application-secret.yaml.j2  # 템플릿 파일의 경로
-        dest: ~/secret/application-secret.yaml  # 생성할 파일의 경로
+        dest: /home/ubuntusecret/application-secret.yaml  # 생성할 파일의 경로
