Feat data_generator 수정

--- a/server_management/ansible/playbook/data_server/data_generator_playbook.yaml
+++ b/server_management/ansible/playbook/data_server/data_generator_playbook.yaml
@@ -14,18 +14,18 @@
 
     - name: Clone the repository
       git:
-        repo: 'https://scofe97:{{ github_token }}@github.com/Projcet-E201/DataDivision.git' 
+        repo: 'https://scofe97:{{ github_token }}@github.com/Projcet-E201/DataGenerator.git' 
         dest: '~/DataDivision'
         clone: yes
         update: yes
 
     - name: Copy application-secret.yaml on the remote host
       command:
-        cmd: cp /home/ubuntu/secret/application-secret.yaml /home/ubuntu/DataDivision/src/main/resources
+        cmd: cp /home/ubuntu/secret/application-secret.yaml /home/ubuntu/DataGenerator/src/main/resources
 
 
     - name: Build Docker image
-      command: docker build -t {{ app_image }} ~/DataDivision
+      command: docker build -t {{ app_image }} home/ubuntu/DataGenerator
 
 
     # 컨테이너 제거
