Feat data_generator 수정

--- a/server_management/ansible/playbook/data_server/data_generator_playbook.yaml
+++ b/server_management/ansible/playbook/data_server/data_generator_playbook.yaml
@@ -15,7 +15,7 @@
     - name: Clone the repository
       git:
         repo: 'https://scofe97:{{ github_token }}@github.com/Projcet-E201/DataGenerator.git' 
-        dest: '~/DataDivision'
+        dest: '/home/ubuntu/DataDivision'
         clone: yes
         update: yes
 
