Feat data_generator_delete 추가

--- a/server_management/ansible/playbook/data_server/data_generator_playbook.yaml
+++ b/server_management/ansible/playbook/data_server/data_generator_playbook.yaml
@@ -18,6 +18,7 @@
         dest: '/home/ubuntu/DataGenerator'
         clone: yes
         update: yes
+        force: yes
 
     - name: Copy application-secret.yaml on the remote host
       command:
