--- a/feature/monitoring/prometheus/config/prometheus.yml
+++ b/feature/monitoring/prometheus/config/prometheus.yml
@@ -7,3 +7,9 @@ scrape_configs:
     scrape_interval: 5s
     static_configs:
       - targets: ['3.36.67.11:8091', '3.36.67.11:8090']
+
+  - job_name: 'kafka'
+    metrics_path: '/jmx'
+    scrape_interval: 5s
+    static_configs:
+      - targets: ['43.200.71.179:9094', '3.36.10.145:9094', '43.200.130.111:9094']
