--- a/server_management/ansible/playbook/all/init.yaml
+++ b/server_management/ansible/playbook/all/init.yaml
@@ -62,8 +62,10 @@
       ansible.builtin.lineinfile:
         path: /lib/systemd/system/docker.service
         regexp: "^ExecStart="
-        line: "ExecStart=/usr/bin/dockerd -H fd:// -H tcp://0.0.0.0:2375"
+        line: "ExecStart=/usr/bin/dockerd -H fd:// -H tcp://0.0.0.0:2375 -metrics-addr 0.0.0.0:9323 --experimental"
       become: yes
+
+    
 
     - name: 도커 리부팅
       ansible.builtin.systemd:
