--- a/feature/monitoring/docker-compose.yaml
+++ b/feature/monitoring/docker-compose.yaml
@@ -9,7 +9,7 @@ services:
     environment:
       - GF_SERVER_HTTP_PORT=7000
     volumes:
-      - ./grafana/volume:/var/lib/grafana
+      - /home/ubuntu/docker-volume/volume/grafana:/var/lib/grafana
     networks:
       - br_app
 
@@ -21,7 +21,7 @@ services:
       - "9090:9090"
     volumes:
       - ./prometheus/config:/etc/prometheus
-      - ./prometheus/volume:/prometheus
+      - /home/ubuntu/docker-volume/volume/prometheus:/prometheus
     networks:
       - br_app
       
