--- a/feature/monitoring/docker-compose.yaml
+++ b/feature/monitoring/docker-compose.yaml
@@ -3,6 +3,7 @@ version: '3'
 services:
   grafana:
     image: grafana/grafana
+    restart: unless-stopped
     container_name: grafana
     ports:
       - "7000:7000"
@@ -15,6 +16,7 @@ services:
 
   prometheus:
     image: prom/prometheus
+    restart: unless-stopped
     container_name: prometheus
     user: "472:472"
     ports:
