--- a/server_management/ansible/playbook/data_server/influxdb/docker-compose.yaml
+++ b/server_management/ansible/playbook/data_server/influxdb/docker-compose.yaml
@@ -3,6 +3,7 @@ version: '3'
 services:
   influxdb:
     image: influxdb:2.7.0
+    restart: unless-stopped
     container_name: influxdb
     ports:
       - "8086:8086"
