--- a/feature/monitoring/prometheus/config/prometheus.yml
+++ b/feature/monitoring/prometheus/config/prometheus.yml
@@ -17,3 +17,6 @@ scrape_configs:
   - job_name: 'docker'
     static_configs:
       - targets: ['10.0.1.178:9323', '10.0.1.168:9323', '10.0.1.65:9323', '10.0.1.189:9323', '10.0.1.51:9323', '10.0.1.80:9323', '10.0.1.226:9323', '10.0.1.225:9323', '10.0.1.13:9323']
+
+rule_files:
+  - "alert.rules.yml"
