--- a/feature/monitoring/alertmanager/docker-compose.yaml
+++ b/feature/monitoring/alertmanager/docker-compose.yaml
@@ -3,7 +3,7 @@ services:
   alertmanager:
     image: prom/alertmanager
     volumes:
-      - ./confing/alertmanager.yml:/etc/alertmanager/alertmanager.yml
+      - ./config/alertmanager.yml:/etc/alertmanager/alertmanager.yml
     command:
       - '--config.file=/etc/alertmanager/alertmanager.yml'
     ports:
