--- a/server_management/ansible/playbook/all/test.yaml
+++ b/server_management/ansible/playbook/all/test.yaml
@@ -6,7 +6,7 @@
       ansible.builtin.lineinfile:
         path: /lib/systemd/system/docker.service
         regexp: '-metrics-addr'
-        line: 'ExecStart=/usr/bin/dockerd -H fd:// -H tcp://0.0.0.0:2375 --metrics-addr 0.0.0.0:9323 --experimental'
+        line: 'ExecStart=/usr/bin/dockerd -H fd:// -H tcp://0.0.0.0:2375'
       become: yes
 
     - name: Reload systemd to apply changes
