Feat cadvisor update

--- a/server_management/ansible/playbook/all/cadvisor_playbook.yaml
+++ b/server_management/ansible/playbook/all/cadvisor_playbook.yaml
@@ -15,7 +15,7 @@
 
     - name: Copy docker-compose file
       copy:
-        src: ./cadvisor/docker-compose.yml
+        src: ./cadvisor/docker-compose.yaml
         dest: /home/ubuntu/cadvior/
 
     - name: Run docker-compose
