--- a/server_management/ansible/playbook/all/cadvisor_playbook.yaml
+++ b/server_management/ansible/playbook/all/cadvisor_playbook.yaml
@@ -15,7 +15,7 @@
     - name: Copy docker-compose file
       copy:
         src: ./cadvisor/docker-compose.yaml
-        dest: /home/ubuntu/cadvior/
+        dest: /home/ubuntu/cadvisor/
 
     - name: Stop existing cadvisor if running
       docker_compose:
@@ -24,5 +24,5 @@
 
     - name: Run docker-compose
       docker_compose:
-        project_src: /home/ubuntu/cadvior/
+        project_src: /home/ubuntu/cadvisor/
         state: present
