--- a/feature/monitoring/prometheus/config/prometheus.yml
+++ b/feature/monitoring/prometheus/config/prometheus.yml
@@ -3,7 +3,7 @@ global:
 
 scrape_configs:
   - job_name: 'spring-actuator'
-    metrics_path: '/actuator/prometheus'
+    metrics_path: '/api/actuator/prometheus'
     scrape_interval: 5s
     static_configs:
       - targets: ['3.36.96.3:8095', '3.36.96.3:8094']
