--- a/feature/monitoring/prometheus/config/prometheus.yml
+++ b/feature/monitoring/prometheus/config/prometheus.yml
@@ -6,7 +6,13 @@ scrape_configs:
     metrics_path: '/api/actuator/prometheus'
     scrape_interval: 5s
     static_configs:
-      - targets: ['3.36.96.3:8091', '3.36.96.3:8090']
+      - targets: ['3.36.96.3:8091']
+
+  - job_name: 'spring-actuator'
+    metrics_path: '/actuator/prometheus'
+    scrape_interval: 5s
+    static_configs:
+      - targets: ['3.36.96.3:8090']
 
   - job_name: 'kafka'
     metrics_path: '/jmx'
