--- a/feature/monitoring/prometheus/config/prometheus.yml
+++ b/feature/monitoring/prometheus/config/prometheus.yml
@@ -2,13 +2,13 @@ global:
   scrape_interval: 15s
 
 scrape_configs:
-  - job_name: 'spring-actuator'
+  - job_name: 'spring-actuator api'
     metrics_path: '/api/actuator/prometheus'
     scrape_interval: 5s
     static_configs:
       - targets: ['3.36.96.3:8091']
 
-  - job_name: 'spring-actuator'
+  - job_name: 'spring-actuator division'
     metrics_path: '/actuator/prometheus'
     scrape_interval: 5s
     static_configs:
