--- a/server_management/ansible/playbook/data_server/data_generator_playbook.yaml
+++ b/server_management/ansible/playbook/data_server/data_generator_playbook.yaml
@@ -3,7 +3,7 @@
   become: yes
   vars:
     app_image: scofe/data_generator
-    github_token: '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' # 이 토큰은 노출되지 않도록 주의해주세요!
+    github_token: "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" # 이 토큰은 노출되지 않도록 주의해주세요!
 
   tasks:
     - name: Install required packages
@@ -14,8 +14,8 @@
 
     - name: Clone the repository
       git:
-        repo: 'https://scofe97:{{ github_token }}@github.com/Projcet-E201/DataGenerator.git' 
-        dest: '/home/ubuntu/DataGenerator'
+        repo: "https://scofe97:{{ github_token }}@github.com/Projcet-E201/DataGenerator.git"
+        dest: "/home/ubuntu/DataGenerator"
         clone: yes
         update: yes
         force: yes
@@ -27,17 +27,15 @@
     - name: Grant execution permissions to Gradle wrapper
       ansible.builtin.file:
         path: /home/ubuntu/DataGenerator/gradlew
-        mode: '0755'
+        mode: "0755"
 
     - name: Build the project with Gradle
-      command: ./gradlew clean build
+      command: ./gradlew clean bootjar
       args:
         chdir: /home/ubuntu/DataGenerator
 
-
     - name: Build Docker image
       command: docker build -t {{ app_image }} /home/ubuntu/DataGenerator
-
 
     # 컨테이너 제거
     - name: Remove existing container 1 if it's running
