Feat DataDivision 서버 생성 및 ansible hosts 변경

--- a/server_management/ansible/playbook/main_server/data_division_playbook.yaml
+++ b/server_management/ansible/playbook/main_server/data_division_playbook.yaml
@@ -1,5 +1,5 @@
 - name: data_division 배포
-  hosts: main_server1
+  hosts: data_division_server
   vars:
     compose_file: "./data_division"
     container_name: "data_division"
