Feat division playbook hosts update

--- a/server_management/ansible/inventory/hosts.yaml
+++ b/server_management/ansible/inventory/hosts.yaml
@@ -46,3 +46,6 @@ all:
         10.0.1.226:
         10.0.1.225:
         10.0.1.13:
+    data_division_server:
+      hosts:
+        43.200.155.14:
