--- a/server_management/ansible/playbook/all/init.yaml
+++ b/server_management/ansible/playbook/all/init.yaml
@@ -1,6 +1,6 @@
 # 플레이북에는 하나 이상의 플레이가 있을 수 있습니다.
 - name: 자바 11설치
-  hosts: all # 이 플레이의 대상 호스트 (인벤토리 파일에서 정의됨)
+  hosts: data_division_server # 이 플레이의 대상 호스트 (인벤토리 파일에서 정의됨)
   become: yes # 필요한 경우 권한을 상승시킵니다 (sudo로 권한 상승)
   tasks: # 이 플레이에 대해 실행할 작업 목록
 
