Fix Datagenarator docker_network 작성

--- a/server_management/ansible/playbook/data_server/deploy_container.yml
+++ b/server_management/ansible/playbook/data_server/deploy_container.yml
@@ -4,6 +4,11 @@
     state: absent
   ignore_errors: yes
 
+- name: Ensure network exists
+  ansible.builtin.docker_network:
+    name: br_app
+    state: present
+
 - name: Run and configure Spring Boot Docker container
   ansible.builtin.docker_container:
     name: "{{ app_container_name }}"
