--- a/server_management/ansible/playbook/all/init.yaml
+++ b/server_management/ansible/playbook/all/init.yaml
@@ -1,6 +1,6 @@
 # 플레이북에는 하나 이상의 플레이가 있을 수 있습니다.
 - name: 자바 11설치
-  hosts: data_division_server # 이 플레이의 대상 호스트 (인벤토리 파일에서 정의됨)
+  hosts: main_server # 이 플레이의 대상 호스트 (인벤토리 파일에서 정의됨)
   become: yes # 필요한 경우 권한을 상승시킵니다 (sudo로 권한 상승)
   tasks: # 이 플레이에 대해 실행할 작업 목록
 
@@ -19,7 +19,7 @@
 
 
 - name: 원격 호스트에 Docker & Docker-compose 설치 및 구성
-  hosts: data_division_server
+  hosts: main_server
   become: yes
   tasks:
     - name: Docker 설치를 위한 필수 패키지 설치
@@ -89,7 +89,7 @@
         cmd: docker-compose --version
 
 - name: 도커 추가 설정 진행
-  hosts: data_division_server
+  hosts: main_server
   become: yes
   tasks:
     - name: 도커 네트워크가 존재하는지 확인
@@ -127,7 +127,7 @@
         state: restarted
         
 - name: 파이썬 라이브러리 설치
-  hosts: data_division_server
+  hosts: main_server
   become: yes
   tasks:
     - name: Install python3-apt
